--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3475-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 27 Oct 2013 17:59:00 +0100
+
 liquidwar6 (0.1.3474-0vendor) unstable; urgency=low
 
   * Bump version
