Not sending META messages outside the dat scope

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,27 @@
+liquidwar6-extra-maps (0.1.3479-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 27 Oct 2013 18:43:11 +0100
+
+liquidwar6-extra-maps (0.1.3478-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 27 Oct 2013 18:31:28 +0100
+
+liquidwar6-extra-maps (0.1.3477-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 27 Oct 2013 18:31:02 +0100
+
+liquidwar6-extra-maps (0.1.3476-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sun, 27 Oct 2013 18:30:37 +0100
+
 liquidwar6-extra-maps (0.1.3475-0vendor) unstable; urgency=low
 
   * Bump version
