Trying to debug out net test suite

--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3480-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 29 Oct 2013 06:56:09 +0100
+
 liquidwar6 (0.1.3479-0vendor) unstable; urgency=low
 
   * Bump version
