--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,27 @@
+liquidwar6 (0.1.3484-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 31 Oct 2013 23:15:48 +0100
+
+liquidwar6 (0.1.3483-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 31 Oct 2013 23:12:28 +0100
+
+liquidwar6 (0.1.3482-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 31 Oct 2013 22:48:54 +0100
+
+liquidwar6 (0.1.3481-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 31 Oct 2013 22:05:50 +0100
+
 liquidwar6 (0.1.3480-0vendor) unstable; urgency=low
 
   * Bump version
