Fixed DB locking bug.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-02 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed DB locking bug.
+
 2013-10-31 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed net code, META messages were not stored in warehouse.
