--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3486-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 09 Nov 2013 00:28:16 +0100
+
 liquidwar6-extra-maps (0.1.3485-0vendor) unstable; urgency=low
 
   * Bump version
