--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2013-11-26 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Introduced dat-stack rebasing, to fix net bugs.
+
 	* Fixing script net test suite, almost done.
 
 2013-11-02 : Christian Mauduit <ufoot@ufoot.org>
