--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3487-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 26 Nov 2013 23:58:06 +0100
+
 liquidwar6 (0.1.3486-0vendor) unstable; urgency=low
 
   * Bump version
