--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3488-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 27 Nov 2013 00:01:51 +0100
+
 liquidwar6 (0.1.3487-0vendor) unstable; urgency=low
 
   * Bump version
