Refactored guile test suite

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3490-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 28 Nov 2013 07:11:48 +0100
+
 liquidwar6-extra-maps (0.1.3489-0vendor) unstable; urgency=low
 
   * Bump version
