Preparing SQL update when updating local node

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3491-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Fri, 29 Nov 2013 07:20:04 +0100
+
 liquidwar6-extra-maps (0.1.3490-0vendor) unstable; urgency=low
 
   * Bump version
