--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,21 @@
+liquidwar6 (0.1.3494-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 03 Dec 2013 07:14:49 +0100
+
+liquidwar6 (0.1.3493-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 03 Dec 2013 07:00:49 +0100
+
+liquidwar6 (0.1.3492-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 03 Dec 2013 07:00:13 +0100
+
 liquidwar6 (0.1.3491-0vendor) unstable; urgency=low
 
   * Bump version
