--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -50,10 +50,27 @@ not an absolute path, will be appended to user dir).
 @strong{Return value:}  the default database name, need not (must not) be freed.
 @end deftypefun
 
+@deftypefun {int} {_lw6p2p_db_timestamp} (_lw6p2p_db_t * @var{db}, int64_t @var{timestamp})
+@var{db}:  the db object concerned (used to calculate time origin)
+
+@var{timestamp}:  the timestamp as returned by lw6sys_get_timestamp
+
+Returns a timestamp suitable for db usage (seconds since object
+creation), set to the timestamp passed as an argument (milliseconds). 
+The reason we don't use
+regular timestamps is that they are 1) too accurate (msec is useless
+for what's involved here) and 2) too big and likely to be negative
+in signed mode even if converted to seconds.
+
+@strong{Return value:}  a timestamp, 0 means "beginning of program" (think of it as uptime)
+@end deftypefun
+
 @deftypefun {int} {_lw6p2p_db_now} (_lw6p2p_db_t * @var{db})
 @var{db}:  the db object concerned (used to calculate time origin)
 
-Returns a timestamp suitable for db usage. The reason we don't use
+Returns a timestamp suitable for db usage, (seconds since object
+creation) set to the current
+moment. The reason we don't use
 regular timestamps is that they are 1) too accurate (msec is useless
 for what's involved here) and 2) too big and likely to be negative
 in signed mode even if converted to seconds.
