--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3495-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Tue, 03 Dec 2013 16:02:19 +0100
+
 liquidwar6-extra-maps (0.1.3494-0vendor) unstable; urgency=low
 
   * Bump version
