--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2013-12-03 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed creation timestamp in local node.
+
 	* Updating DB when local node's state changes.
 
 2013-11-26 : Christian Mauduit <ufoot@ufoot.org>
