Using serial_real and not serial_base to get MISS messages.

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3496-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 05 Dec 2013 00:38:19 +0100
+
 liquidwar6-extra-maps (0.1.3495-0vendor) unstable; urgency=low
 
   * Bump version
