Re-organized test scripts

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3497-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Mon, 09 Dec 2013 07:22:29 +0100
+
 liquidwar6-extra-maps (0.1.3496-0vendor) unstable; urgency=low
 
   * Bump version
