--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,15 @@
+liquidwar6-extra-maps (0.1.3499-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Mon, 09 Dec 2013 16:29:34 +0100
+
+liquidwar6-extra-maps (0.1.3498-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Mon, 09 Dec 2013 15:39:29 +0100
+
 liquidwar6-extra-maps (0.1.3497-0vendor) unstable; urgency=low
 
   * Bump version
