More logs to track down dat bug

--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3500-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 11 Dec 2013 06:29:23 +0100
+
 liquidwar6 (0.1.3499-0vendor) unstable; urgency=low
 
   * Bump version
