Using a separate liquidwar6-doc binary to generate selfdoc, should work better on platforms where SDL_main is used

--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,33 @@
+liquidwar6-extra-maps (0.1.3505-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 18 Dec 2013 14:28:08 +0100
+
+liquidwar6-extra-maps (0.1.3504-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 18 Dec 2013 13:27:13 +0100
+
+liquidwar6-extra-maps (0.1.3503-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 18 Dec 2013 13:22:38 +0100
+
+liquidwar6-extra-maps (0.1.3502-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 18 Dec 2013 12:58:52 +0100
+
+liquidwar6-extra-maps (0.1.3501-0vendor) unstable; urgency=medium
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 18 Dec 2013 12:03:44 +0100
+
 liquidwar6-extra-maps (0.1.3500-0vendor) unstable; urgency=medium
 
   * Bump version
