--- a/liquidwar6/po/fr.po
+++ b/liquidwar6/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6 dev\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2013-12-11 06:31+0100\n"
+"POT-Creation-Date: 2013-12-18 14:33+0100\n"
 "PO-Revision-Date: 2008-12-30 21:46+0100\n"
 "Last-Translator: Christian Mauduit <ufoot@ufoot.org>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -252,7 +252,7 @@ msgstr "Aidez GNU %s"
 msgid "Fight software patents %s"
 msgstr "Contre les brevets logiciels %s"
 
-#: src/lib/hlp/hlp-credits.c:168 src/lib/lw6-print.c:58
+#: src/lib/hlp/hlp-credits.c:168 src/lib/hlp/hlp-print.c:263
 #: src/lib/sys/sys-log.c:726
 msgid "Report bugs"
 msgstr "Soummission de bugs"
@@ -261,6 +261,46 @@ msgstr "Soummission de bugs"
 #, c-format
 msgid "unable to handle credits id %d"
 msgstr "impossible de lire la ligne de 'credits' %d"
+
+#: src/lib/hlp/hlp-options.c:82
+#, c-format
+msgid "unknown option \"%s\""
+msgstr "option inconnue \"%s\""
+
+#: src/lib/hlp/hlp-options.c:101
+msgid "unable to start daemon"
+msgstr "impossible de démarrer le démon"
+
+#: src/lib/hlp/hlp-print.c:251
+#, c-format
+msgid "Usage: %s [--option1[=value1]] ... [--optionN[=valueN]]\n"
+msgstr "Usage: %s [--option1[=value1]] ... [--optionN[=valueN]]\n"
+
+#: src/lib/hlp/hlp-print.c:262
+msgid "Home page"
+msgstr "Page d'accueil"
+
+#: src/lib/hlp/hlp-print.c:299
+#, c-format
+msgid ""
+"License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl."
+"html>\n"
+"This is free software: you are free to change and redistribute it.\n"
+"There is NO WARRANTY, to the extent permitted by law.\n"
+msgstr ""
+"License GPLv3+: Licence Générale Publique GNU version 3 ou supérieure "
+"<http://gnu.org/licenses/gpl.html>\n"
+"Ceci est un logiciel libre et vous êtes invité à le redistribuer suivant "
+"certaines conditions.\n"
+"Ce programme vient SANS ABSOLUMENT AUCUNE GARANTIE.\n"
+
+#: src/lib/hlp/hlp-print.c:1178
+msgid "hello"
+msgstr "bonjour"
+
+#: src/lib/hlp/hlp-print.c:1225
+msgid "goodbye"
+msgstr "au revoir"
 
 #: src/lib/hlp/hlp-reference.c:3077
 msgid "moves faster than the average"
@@ -425,55 +465,15 @@ msgstr "impossible de redémarrer en corrigeant les variables d'environnement"
 msgid "unable to read main script file \"%s\""
 msgstr "impossible de lire le fichier de script principal \"%s\""
 
-#: src/lib/lw6-options.c:142
-#, c-format
-msgid "unknown option \"%s\""
-msgstr "option inconnue \"%s\""
-
-#: src/lib/lw6-options.c:160
-msgid "unable to start daemon"
-msgstr "impossible de démarrer le démon"
-
-#: src/lib/lw6-options.c:202 src/lib/lw6-options.c:257
+#: src/lib/lw6-options.c:130 src/lib/lw6-options.c:186
 msgid "all tests SUCCESSFULL!"
 msgstr "tous les tests passés avec SUCCÈS!"
 
-#: src/lib/lw6-options.c:208 src/lib/lw6-options.c:263
+#: src/lib/lw6-options.c:136 src/lib/lw6-options.c:192
 #, c-format
 msgid "test FAILED, see log file \"%s\" for details"
 msgstr ""
 "le test a ÉCHOUÉ, voir le fichier de log \"%s\" pour plus d'informations"
-
-#: src/lib/lw6-print.c:46
-#, c-format
-msgid "Usage: %s [--option1[=value1]] ... [--optionN[=valueN]]\n"
-msgstr "Usage: %s [--option1[=value1]] ... [--optionN[=valueN]]\n"
-
-#: src/lib/lw6-print.c:57
-msgid "Home page"
-msgstr "Page d'accueil"
-
-#: src/lib/lw6-print.c:92
-#, c-format
-msgid ""
-"License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl."
-"html>\n"
-"This is free software: you are free to change and redistribute it.\n"
-"There is NO WARRANTY, to the extent permitted by law.\n"
-msgstr ""
-"License GPLv3+: Licence Générale Publique GNU version 3 ou supérieure "
-"<http://gnu.org/licenses/gpl.html>\n"
-"Ceci est un logiciel libre et vous êtes invité à le redistribuer suivant "
-"certaines conditions.\n"
-"Ce programme vient SANS ABSOLUMENT AUCUNE GARANTIE.\n"
-
-#: src/lib/lw6-print.c:922
-msgid "hello"
-msgstr "bonjour"
-
-#: src/lib/lw6-print.c:969
-msgid "goodbye"
-msgstr "au revoir"
 
 #: src/lib/map/map-color.c:204
 msgid "Red"
